--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Hello World!</h1>
+<h1>Hello World</h1>
 <p>Welcome to my page!</p>
+
+<%#
+<!--  a ='Hello World !!!! '-->
+<!--  b = 1 + 1-->
+%>
+<%#= b %>
+
+<%= @address %>
